--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ A.H
 </head>
 
 <body>
-     <iframe src="https://www.google.com/?hl=ar" style="width: 120%;" height="60%"></iframe>
+     <iframe src="https://www.wikipedia.org/" style="width: 100%;" height="100%"></iframe>
     <table border="1" width="100%">
         <caption>Data</caption> 
     <tr>
@@ -65,6 +65,13 @@ A.H
      </ol>
     <hr>
     <h1>watch1</h1>
+    <img src="./WhatsApp Image 2023-03-04 at 11.07.53 PM (1).jpeg" alt="img" style="width: 20%;" height="20%">
+    <p>price:500$</p>
+    <button>Buy Now</button>
+    <h2>watch2</h2>
+    <img src="./WhatsApp Image 2023-03-04 at 11.07.53 PM.jpeg" alt="img" style="width: 20%;" height="20%">
+    <p>price:350$</p>
+    <button>Buy Now</button>
 </body>
 
 
